# SmartCollectTest

./: Makefile  README.md  docker-compose.yml
deploy/: app.Dockerfile  run_django.sh
src/: .env.example  pyproject.toml
src/server/: asgi.py  celery_app.py  settings.py  urls.py  wsgi.py
src/server/api/: urls.py
src/server/api/v1/: urls.py
src/server/api/v1/payouts/: filters.py  serializers.py  urls.py  views.py
src/server/apps/payouts/: apps.py  enums.py  models.py
src/server/apps/payouts/migrations/: 0001_initial.py
src/server/apps/periodic_tasks/: tasks.py
src/server/tests/: test_payouts.py
